Finish DragonBattleMock